--- a/templates/base.html
+++ b/templates/base.html
@@ -76,87 +76,86 @@
           <div class="row">
             <div class="col-sm-12">
               <div class="row">
-                <div class="col-sm-4">
-                  <p class="pull-left">
+                <div class="col-xs-12">
                     &copy; GovReady {% now "Y" %}.
                     <a href="/privacy">Privacy Policy</a>.
-                    <a href="/terms-of-service">Terms of Service</a>.
-                  </p>
+                    <a href="/terms-of-service">Terms of Service</a>. 
                 </div>
-                <div class="col-sm-4">&nbsp;</div>
-                <div class="col-sm-4"><p class="pull-right">ver {{APP_VERSION_STRING}}</p></div>
+                <div class="col-xs-12">
+                  ver {{APP_VERSION_STRING}}
+                </div>
             </div>
           </div>
         </div>
       </footer>
     {% endblock %}
 
-{% include "bootstrap-helpers.html" %}
+    {% include "bootstrap-helpers.html" %}
 
-<div id="invitation_modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="invitation_modal_title" aria-hidden="true" data-url="{% url "send_invitation" %}">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="invitation_modal_title">...</h4>
-      </div>
-      <div class="modal-body">
-        <p style="margin: 1em 0 2em 0">Hmm text here.</p>
-        <form class="form" onsubmit="return send_invitation()">
-            {% csrf_token %}
-            <div class="form-group" style="margin-right: 1em">
-              <label for="invite-user-select">Select user to invite</label>
-              <br>
-              <select id="invite-user-select" class="form-control" name="user" onchange="invite_toggle_mode()">
-              </select>
-            </div>
-            <div class="form-group" style="margin-right: 1em; display: none">
-              <label for="invite-user-email">
-                Invite by Email
-                <span>(<a onclick="$('#invite-user-select').val(''); invite_toggle_mode()">back</a>)</span>
-              </label>
-              <br>
-              <input id="invite-user-email" class="form-control" name="email" type="email" placeholder="person@your-agency.gov" style="width: 25em;">
-            </div>
-            <div id="invite-message-container" style="margin-top: 1em">
-              <label for="invite-message">Include a message about why you are sending this invitation:</label>
-              <textarea id="invite-message" class="form-control" style="width: 100%; height: 4em"></textarea>
-            </div>
-            <div id="invite-addtoteam-container" style="display: none">
-              <div class="checkbox" style="margin-top: 1em">
-                <label>
-                  <input name="add-to-team" type="checkbox"> Add user to system team
-                </label>
-              </div>
-            </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Nevermind</button>
-        <button type="button" class="btn btn-success btn-submit" onclick="$('#invitation_modal form').submit()">Invite</button>
+    <div id="invitation_modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="invitation_modal_title" aria-hidden="true" data-url="{% url "send_invitation" %}">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title" id="invitation_modal_title">...</h4>
+          </div>
+          <div class="modal-body">
+            <p style="margin: 1em 0 2em 0">Hmm text here.</p>
+            <form class="form" onsubmit="return send_invitation()">
+                {% csrf_token %}
+                <div class="form-group" style="margin-right: 1em">
+                  <label for="invite-user-select">Select user to invite</label>
+                  <br>
+                  <select id="invite-user-select" class="form-control" name="user" onchange="invite_toggle_mode()">
+                  </select>
+                </div>
+                <div class="form-group" style="margin-right: 1em; display: none">
+                  <label for="invite-user-email">
+                    Invite by Email
+                    <span>(<a onclick="$('#invite-user-select').val(''); invite_toggle_mode()">back</a>)</span>
+                  </label>
+                  <br>
+                  <input id="invite-user-email" class="form-control" name="email" type="email" placeholder="person@your-agency.gov" style="width: 25em;">
+                </div>
+                <div id="invite-message-container" style="margin-top: 1em">
+                  <label for="invite-message">Include a message about why you are sending this invitation:</label>
+                  <textarea id="invite-message" class="form-control" style="width: 100%; height: 4em"></textarea>
+                </div>
+                <div id="invite-addtoteam-container" style="display: none">
+                  <div class="checkbox" style="margin-top: 1em">
+                    <label>
+                      <input name="add-to-team" type="checkbox"> Add user to system team
+                    </label>
+                  </div>
+                </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Nevermind</button>
+            <button type="button" class="btn btn-success btn-submit" onclick="$('#invitation_modal form').submit()">Invite</button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
-        <script src="{% static "vendor/jquery.js" %}"></script>
-        <script src="{% static "vendor/bootstrap/js/bootstrap.min.js" %}"></script>
-        <script src="{% static "vendor/bootstrap-responsive-tabs.js" %}"></script>
-        <script src="{% static "vendor/autosize.min.js" %}"> </script>
-        <script src="{% static "vendor/textcomplete.min.js" %}"> </script>
+    <script src="{% static "vendor/jquery.js" %}"></script>
+    <script src="{% static "vendor/bootstrap/js/bootstrap.min.js" %}"></script>
+    <script src="{% static "vendor/bootstrap-responsive-tabs.js" %}"></script>
+    <script src="{% static "vendor/autosize.min.js" %}"> </script>
+    <script src="{% static "vendor/textcomplete.min.js" %}"> </script>
 
-        <script src="{% static "js/discussion.js" %}"></script>
-        <script src="{% static "js/main.js" %}"></script>
-        <script src="{% static "vendor/bootstrap-helpers.js" %}"></script>
-        <script>
-        $(document).ajaxSend(function(event, xhr, settings) { if (!/^https?:.*/.test(settings.url)) xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}"); });
-        </script>
+    <script src="{% static "js/discussion.js" %}"></script>
+    <script src="{% static "js/main.js" %}"></script>
+    <script src="{% static "vendor/bootstrap-helpers.js" %}"></script>
+    <script>
+    $(document).ajaxSend(function(event, xhr, settings) { if (!/^https?:.*/.test(settings.url)) xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}"); });
+    </script>
 
-        {% if MOUSE_CURSOR_FOLLOWER %}
-        <script>enableMouseCursorFollower();</script>
-        {% endif %}
+    {% if MOUSE_CURSOR_FOLLOWER %}
+    <script>enableMouseCursorFollower();</script>
+    {% endif %}
 
-        {% block scripts %}
-        {% endblock %}
+    {% block scripts %}
+    {% endblock %}
     </body>
 </html>
