--- a/templates/love-assessments.html
+++ b/templates/love-assessments.html
@@ -14,7 +14,7 @@ Love Assessments
 {% endblock %}
 
 {% block body %}
-<div class="body-text" style="width: 650px;">
+<div class="body-text" style="max-width: 650px;">
 	<h1>Fall in love with assessments</h1>
 
 	<p>You are assessing right now.</p>
