add test for submitting new portfolio

--- a/templates/portfolios/form.html
+++ b/templates/portfolios/form.html
@@ -21,7 +21,7 @@ Welcome to Compliance Automation
                     {% csrf_token %}
                     <input type=hidden name=action value=neworg>
                     {% bootstrap_form form %}
-                    <p><button type="submit" class="btn btn-success">Next &raquo;</button></p>
+                    <p><button type="submit" id="create-portfolio-button" class="btn btn-success">Next &raquo;</button></p>
                 </form>
             </div>
         </div>
