--- a/templates/portfolios/index.html
+++ b/templates/portfolios/index.html
@@ -17,7 +17,7 @@ Your Compliance Portfolios
 <div style="margin-top: 30px">
   <div class="container">
     <div style="float: right; margin: 0 0.5em 0em 5em;">
-      <a id="new-group" href="/portfolios/new" class="btn btn-success">Create a portfolio</a>
+      <a id="new-portfolio" href="/portfolios/new" class="btn btn-success">Create a portfolio</a>
     </div>
 
     <h2 class="">Portfolios</h2>
