--- a/templates/portfolios/detail.html
+++ b/templates/portfolios/detail.html
@@ -4,7 +4,7 @@
 {% load q %}
 
 {% block title %}
-Welcome to GovReady Q - {{org.name}}
+{{ portfolio.title }} Portfolio
 {% endblock %}
 
 {% block head %}
