--- a/templates/portfolios/detail.html
+++ b/templates/portfolios/detail.html
@@ -32,7 +32,7 @@ Remove contextbar from top of page
     <div style="float: right; margin: 0 0.5em 0em 5em;">
       <a id="new-project" href="/store?portfolio={{portfolio.id}}" class="btn btn-success">Start a project</a>
       {% if can_invite_to_portfolio %}
-      <a href="#" onclick="invite_user_into_portfolio(); return false;" class="btn btn-success"><i
+      <a href="#" onclick="invite_user_into_portfolio(); return false;" id="grant-portfolio-access" class="btn btn-success"><i
           class="glyphicon glyphicon-plus"></i> Grant access to member</a>
       {% endif %}
     </div>
