--- a/templates/projects.html
+++ b/templates/projects.html
@@ -136,7 +136,7 @@ Your Compliance Projects
     {% endif %}
   </div>
   <div class="col-xs-10 col-md-5">
-    <a href="{{project.get_absolute_url}}" style="color: black;">{{project.organization}} / {{project.title}}</a>
+    <a href="{{project.get_absolute_url}}" style="color: black;">{{project.title}}</a>
   </div>
 
   <div class="col-xs-12 col-sm-3">&nbsp;</div>
