--- a/templates/portfolios/detail.html
+++ b/templates/portfolios/detail.html
@@ -84,7 +84,7 @@ Remove contextbar from top of page
 
             <p>Think of a portfolio like a folder for your projects.</p>
 
-            <p>The owner of the portfolio can manage portfolio members.</p>
+            <p>The owners of the portfolio can manage portfolio members.</p>
           </div>
           <div class="col-md-3">
             <div class="glyphicon glyphicon-folder-open" style="font-size: 8em; color: rgb(160, 210, 160);"></div>
