update portfolio/project relationship so that a project has one portfolio

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -139,8 +139,8 @@ Your Compliance Projects
     <a href="{{project.get_absolute_url}}" style="color: black;">{{project.title}}</a>
   </div>
 
-  <div class="col-xs-12 col-sm-3">&nbsp;</div>
-  <div class="col-xs-12 col-sm-1"><small style="color: #888;">ID: {{project.id}}</small></div>
+  <div class="col-xs-6 col-sm-2"><small style="color: #888;">Portfolio: {{project.portfolio.title}}</small></div>
+  <div class="col-xs-6 col-sm-2"><small style="color: #888;">ID: {{project.id}}</small></div>
 
   <div class="col-xs-12 col-md-2" style="text-align: right;">
       <small style="color: #888;">
