--- a/templates/portfolios/detail.html
+++ b/templates/portfolios/detail.html
@@ -30,7 +30,11 @@ Remove contextbar from top of page
 <div style="margin-top: 30px">
   <div class="container">
     <div style="float: right; margin: 0 0.5em 0em 5em;">
-      <a id="new-project" href="/store?portfolio={{portfolio.id}}" class="btn btn-success">Start a project</a>
+      <form id="#new-project" method="post" action="{% url 'store' %}" class="inline">
+        {% csrf_token %}
+        <input type="hidden" id="portfolio" name="portfolio" value="{{portfolio.id}}">
+        <input type="submit" value="Start a Project" class="btn btn-success" />
+      </form>
       {% if can_invite_to_portfolio %}
       <a href="#" onclick="invite_user_into_portfolio(); return false;" id="grant-portfolio-access" class="btn btn-success"><i
           class="glyphicon glyphicon-plus"></i> Grant access to member</a>
