--- a/templates/projects.html
+++ b/templates/projects.html
@@ -104,11 +104,7 @@ Your Compliance Projects
 <div class="container">
 
 <div style="float: right; margin: 0 0.5em 0em 5em;">
-  <!-- <a id="new-system" href="/store?protocol=govready.com/apps/compliance/2018/information-technology-system" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> Add system </a> -->
-  <a id="new-project" href="/store" class="btn btn-success">Start a project</a>
-  {% if can_invite_to_org %}
-  <a href="#" onclick="show_invite_to_org(); return false;" class="btn btn-success"><em class="glyphicon glyphicon-send"></em> Invite colleague </a>
-  {% endif %}
+  <a id="new-project" onclick="show_select_portfolio_modal(); return false;" href="#"" class=" btn btn-success">Start a project</a>
 </div>
 
 {% if projects|length > 0 %}
@@ -210,10 +206,34 @@ Your Compliance Projects
     </div>
 </div>
 
+<div id="select_portfolio_modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="invitation_modal_title" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="invitation_modal_title">Select a Portfolio</h4>
+      </div>
+      <form action="{% url 'store' %}" role="form" method="post">
+        <div class="modal-body">
+          {% csrf_token %}
+          {{ project_form.portfolio }}
+         </div>
+         <div class="modal-footer">
+           <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+           <button class="btn btn-success btn-submit" type="submit">Start Project</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 
 {% endblock %}
 
 {% block scripts %}
 <script>
+  function show_select_portfolio_modal(callback) {
+    var m = $('#select_portfolio_modal');
+    m.modal();
+  }
 </script>
 {% endblock %}
