--- a/templates/portfolios/form.html
+++ b/templates/portfolios/form.html
@@ -12,7 +12,7 @@ Welcome to Compliance Automation
         <div class="col-md-3" style="margin: 40px 0px 30px 0px;">
             <h2>New Portfolio</h2>
             <p>Portfolios allow you to organize and manage related projects. Members of a portfolio can access all of
-                its unrestriced projects.</p>
+                its unrestricted projects.</p>
         </div>
 
         <div class="col-md-9" style="margin: 40px 0px 30px 0px;">
