update tests for making user select profile when creating a project

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -220,7 +220,7 @@ Your Compliance Projects
          </div>
          <div class="modal-footer">
            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-           <button class="btn btn-success btn-submit" type="submit">Start Project</button>
+           <button id="select_portfolio_submit" class="btn btn-success btn-submit" type="submit">Start Project</button>
           </div>
         </form>
       </div>
