--- a/templates/question.html
+++ b/templates/question.html
@@ -1042,8 +1042,8 @@ function record_interaction() {
 </script>
 
 {% if authoring_tool_enabled %}
-<script src="{% static "vendor/js-yaml.min.js" %}"></script>
-<script src="{% static "js/authoring_tool.js" %}"></script>
+<script src="{% static 'vendor/js-yaml.min.js' %}"></script>
+<script src="{% static 'js/authoring_tool.js' %}"></script>
 <style>.dropdown-menu.textcomplete-dropdown { z-index: 99999 !important; }</style> {# show over modal #}
 <script>
 $(function() {
