--- a/templates/authoring-tool-modal.html
+++ b/templates/authoring-tool-modal.html
@@ -63,7 +63,16 @@ div.modal-content{
   .modal.right.fade.in .modal-dialog {
     right: 0;
   }
-k
+
+/*Center*/
+  .modal.center.fade .modal-dialog {
+    /*right: -320px;*/
+    top:22px;
+    -webkit-tranition: opacity 0.0s linear, right 0.0s ease-out;
+       -moz-transition: opacity 0.0s linear, right 0.0s ease-out;
+         -o-transition: opacity 0.0s linear, right 0.0s ease-out;
+            transition: opacity 0.0s linear, right 0.0s ease-out;
+  }
 
 /* ----- MODAL STYLE ----- */
   .modal-content {
@@ -279,15 +288,6 @@ label {
               <span class="help-block">Optional question specification YAML data not defined above.</span>
             </div>
           </div>
-          <div class="form-group">
-            <label for="other" class="col-sm-2 control-label">Other</label>
-            <div class="col-sm-10">
-              <button class="" title="New question" onclick="authoring_tool_new_question({{task.id}}, false); return false;">
-                <span class="glyphicon glyphicon-plus"></span>
-                New question
-              </button>
-            </div>
-          </div>
         </form>
 
       </div>
@@ -326,6 +326,54 @@ label {
         <!-- <button type="button" class="btn btn-danger" onclick="authoring_tool_delete_question()">Delete Question</button> -->
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
         <!-- <button type="button" class="btn btn-success" onclick="authoring_tool_save_module()">Save Changes</button> -->
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="create_q_authoring_tool" class="modal center fade" tabindex="-1" role="dialog" aria-labelledby="questionnaire_authoring_tool_title" aria-hidden="true" data-keyboard="false" data-backdrop="false">
+  <div class="modal-dialog modal-md">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="questionnaire_authoring_tool_title">
+          Create New Project
+        </h4>
+      </div>
+      <div class="modal-body">
+        <form class="form-horizontal" onsubmit="return false;">
+          <div class="form-group">
+            <label for="authoring_tool_q_2_title" class="col-sm-2 control-label">Name</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="authoring_tool_q_2_title" name="title">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="authoring_tool_q_name" class="col-sm-2 control-label">Slug</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="authoring_tool_q_name" pattern="[a-zA-Z0-9_-]*" name="q_slug">
+              <span class="help-block small">Letters, numbers, "-", "_" only)</span>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="authoring_tool_q_1_ds" class="col-sm-2 control-label">Category</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="authoring_tool_q_1_ds" name="category" value="Drafts">
+              <span class="help-block small">Ex: Technology, Policy, Drafts, . . .</span>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="authoring_tool_q_1_ds" class="col-sm-2 control-label">Description</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="authoring_tool_q_1_ds" name="short_description">
+              <span class="help-block small">Less than 100 characters</span>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-success" onclick="authoring_tool_create_q()">Create</button>
       </div>
     </div>
   </div>
