--- a/templates/project-outputs.html
+++ b/templates/project-outputs.html
@@ -7,7 +7,13 @@ Control Text: {{project.title}}
 {% block head %}
 {{block.super}}
 <style>
-h2 { margin-top: 1.5em; }
+  h2 { margin-top: 1.5em; }
+
+  .doc {
+    border: 1px solid #999;
+    margin-top: 12px;
+    padding: 20px;
+  }
 </style>
 {% endblock %}
 
@@ -23,5 +29,6 @@ Control Text
   </ul>
 
   {{combined_output|safe}}
+
 
 {% endblock %}
