--- a/templates/admin/guidedmodules/module/change_form.html
+++ b/templates/admin/guidedmodules/module/change_form.html
@@ -3,14 +3,14 @@
 {% block form_top %}
     {% with module_usage_hierarchy=original.module_usage_hierarchy %}
         {% if module_usage_hierarchy %}
-            <h2>Module Usage</h2>
+            <h2>Module Usage Hierarchy</h2>
             {{module_usage_hierarchy|safe}}
         {% endif %}
     {% endwith %}
 
     {% with questions_dependencies=original.questions_dependencies %}
         {% if questions_dependencies %}
-            <h2>Question Dependencies</h2>
+            <h2>Questions</h2>
             {{questions_dependencies|safe}}
         {% endif %}
     {% endwith %}
