Shorten Upgrade App popup confirmation text

--- a/templates/base.html
+++ b/templates/base.html
@@ -161,7 +161,7 @@
     var upgrade_app_option_confirm = true; // is set to true in dev tools for headless scripting
     function upgrade_app(app_id) {
       if (upgrade_app_option_confirm
-         && !confirm("WARNING - ADMINISTRATORS ONLY\n\nUpgrading will update all instances tied to this version of '{{project.root_task.title}}' to the questions, document templates, and business logic in '{{project.root_task.title}}' to the latest version available. Your data will not be changed.\n\n Are you sure you want to upgrade?"))
+         && !confirm("All instances of '{{project.root_task.title}}' will be updated.\n\nAre you sure you want to upgrade?"))
         return;
       ajax_with_indicator({
           url: "/tasks/_upgrade-app",
