add modal for selecting portfolio when starting project in portfolio, update tests

--- a/templates/portfolios/portfolios_table.html
+++ b/templates/portfolios/portfolios_table.html
@@ -9,7 +9,7 @@
     <div class="col-md-5">
       <div>
         <span class="glyphicon glyphicon-folder-close"></span>&nbsp;&nbsp;&nbsp;
-        <a href="/portfolios/{{portfolio.id}}/projects" id="portfolio_{{portfolio.id}}" style="color: black;">{{portfolio.title}}</a>
+        <a href="/portfolios/{{portfolio.id}}/projects" id="portfolio_{{portfolio.title}}" style="color: black;">{{portfolio.title}}</a>
       </div>
     </div>
 
