--- a/templates/portfolios/detail.html
+++ b/templates/portfolios/detail.html
@@ -30,14 +30,11 @@ Remove contextbar from top of page
 <div style="margin-top: 30px">
   <div class="container">
     <div style="float: right; margin: 0 0.5em 0em 5em;">
-      <form id="#new-project" method="post" action="{% url 'store' %}" class="inline">
-        {% csrf_token %}
-        <input type="hidden" id="portfolio" name="portfolio" value="{{portfolio.id}}">
-        <input id="new-project-submit" type="submit" value="Start a Project" class="btn btn-success" />
-      </form>
+      <a id="new-project" onclick="show_select_portfolio_modal(); return false;" href="#"" class=" btn
+        btn-success">Start a project</a>
       {% if can_invite_to_portfolio %}
-      <a href="#" onclick="invite_user_into_portfolio(); return false;" id="grant-portfolio-access" class="btn btn-success"><i
-          class="glyphicon glyphicon-plus"></i> Grant access to member</a>
+      <a href="#" onclick="invite_user_into_portfolio(); return false;" id="grant-portfolio-access"
+        class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> Grant access to member</a>
       {% endif %}
     </div>
 
@@ -130,6 +127,7 @@ Remove contextbar from top of page
           {% endfor %}
         </div>
       </div>
+      {% include "portfolios/select-portfolio-modal.html" %}
       {{ block.super }}
       {% endblock %}
 
