--- a/templates/projects.html
+++ b/templates/projects.html
@@ -104,11 +104,7 @@ Your Compliance Projects
 <div class="container">
 
 <div style="float: right; margin: 0 0.5em 0em 5em;">
-  <!-- <a id="new-system" href="/store?protocol=govready.com/apps/compliance/2018/information-technology-system" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> Add system </a> -->
-  <a id="new-project" href="/store" class="btn btn-success">Start a project</a>
-  {% if can_invite_to_org %}
-  <a href="#" onclick="show_invite_to_org(); return false;" class="btn btn-success"><em class="glyphicon glyphicon-send"></em> Invite colleague </a>
-  {% endif %}
+  <a id="new-project" onclick="show_select_portfolio_modal(); return false;" href="#"" class=" btn btn-success">Start a project</a>
 </div>
 
 {% if projects|length > 0 %}
@@ -136,11 +132,11 @@ Your Compliance Projects
     {% endif %}
   </div>
   <div class="col-xs-10 col-md-5">
-    <a href="{{project.get_absolute_url}}" style="color: black;">{{project.organization}} / {{project.title}}</a>
+    <a href="{{project.get_absolute_url}}" style="color: black;">{{project.title}}</a>
   </div>
 
-  <div class="col-xs-12 col-sm-3">&nbsp;</div>
-  <div class="col-xs-12 col-sm-1"><small style="color: #888;">ID: {{project.id}}</small></div>
+  <div class="col-xs-6 col-sm-2"><small style="color: #888;">Portfolio: {{project.portfolio.title}}</small></div>
+  <div class="col-xs-6 col-sm-2"><small style="color: #888;">ID: {{project.id}}</small></div>
 
   <div class="col-xs-12 col-md-2" style="text-align: right;">
       <small style="color: #888;">
@@ -176,8 +172,8 @@ Your Compliance Projects
           <div class="glyphicon glyphicon glyphicon-folder-open"></div>
         </div>
         <div class="col-md-9">
-          <h3><a href="/groups/new">Create a group</a></h3>
-          <p>Groups are a way to organize and manage related projects.
+          <h3><a href="/portfolios/new">Create a Portfolio</a></h3>
+          <p>Portfolios are a way to organize and manage related projects.
           </p>
         </div>
       </div>
@@ -210,10 +206,6 @@ Your Compliance Projects
     </div>
 </div>
 
+{% include "portfolios/select-portfolio-modal.html" %}
 
-{% endblock %}
-
-{% block scripts %}
-<script>
-</script>
 {% endblock %}
